# app/Filament/Resources/BrandResource/Pages/EditBrand.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Filament\Resources\BrandResource\Pages;
+
+use App\Filament\Resources\BrandResource;
+use Filament\Actions;
+use Filament\Resources\Pages\EditRecord;
+
+class EditBrand extends EditRecord
+{
+    protected static string $resource = BrandResource::class;
+
+    protected function getHeaderActions(): array
+    {
+        return [Actions\DeleteAction::make()->visible(fn () => ! $this->record->products()->exists())];
+    }
+}
